[package]
name = "yad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["macros"] }
chrono = { version = "0.4.31", features = ["serde"] }

log = "0.4.20"
octocrab = "0.32.0"
regex = "1.10.2"
reqwest = "0.11.23"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
systemd-journal-logger = "2.1.1"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.8"
url = "2.5.0"
