[package]
name = "yad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-sqlite = "0.2.0"
axum = { version = "0.7.2", features = ["macros"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
chrono = { version = "0.4.31", features = ["serde"] }
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
log = "0.4.20"
regex = "1.10.2"
reqwest = "0.11.23"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8.8"
url = { version = "2.5.0", features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
systemd-journal-logger = "2.1.1"
